# libtorrentSN

./: CMakeLists.txt  README.md  TIPS  chatgpt_questions  looooog-magnet-uri  loooooog_downloading  loooooooog2  looooooooog  looooooooog4  setup_environment_for_run.sh
Play/: CMakeLists.txt  broadcast_socket.hpp  make_torrent.cpp  make_torrent.hpp  settings.cpp  settings.hpp  setup_transfer.cpp  setup_transfer.hpp  test_anything.cpp  test_session_s.cpp  test_something.cpp  test_ssl_torrent.cpp  test_storage_s.cpp  test_utils.cpp  test_utils.hpp  udp_tracker.cpp  udp_tracker.hpp
cmake/Modules/: FindEVENT2.cmake  FindFastFloat.cmake  FindFmt.cmake  FindPSL.cmake  FindRapidJSON.cmake  FindSmall.cmake  FindUtfCpp.cmake
examples/: CMakeLists.txt  bt-get3.cpp  check_files.cpp  client_test.cpp  connection_tester.cpp  dump_torrent.cpp  magnet2torrent.cpp  make_torrent.cpp  torrent2magnet.cpp  torrent_view.cpp
gtk/: Actions.cc  Actions.h  Application.cc  Application.h  BaconTimeLabel.cc  BaconTimeLabel.h  BaconVideoWidget.cc  BaconVideoWidget.h  BaconVideoWidgetEnums.h  BitfieldScale.cc  BitfieldScale.h  CMakeLists.txt  DetailsDialog.cc  DetailsDialog.h  Dialogs.cc  Dialogs.h  DynamicPropertyStore.h  FaviconCache.cc  FileList.cc  FileList.h  FilterBar.cc  FilterBar.h  FilterBase.h  FilterListModel.h  FilterListModel.hh  FreeSpaceLabel.cc  FreeSpaceLabel.h  GtkCompat.h  ListModelAdapter.cc  ListModelAdapter.h  MainWindow.cc  MainWindow.h  MakeDialog.cc  MakeDialog.h  MessageLogWindow.cc  MessageLogWindow.h  MyHdyFlap.cc  MyHdyFlap.h  OptionsDialog.cc  OptionsDialog.h  (+75 more)
gtk/gstbt/: gst_bt.cpp  gst_bt_demux.cpp  gst_bt_demux.hpp
gtk/totem/: BaconTimeLabelWrapper.h  BaconVideoWidgetWrapper.h  CMakeLists.txt  TestTotem.cc  TotemPlaylistWrapper.h  TotemPluginsEngineWrapper.h
gtk/totem-plugins/: CMakeLists.txt  totem-dirs.cc  totem-dirs.h  totem-plugin.h  totem-plugins-engine.cc  totem-plugins-engine.h
gtk/totem-plugins/open-directory/: CMakeLists.txt  totem-open-directory.cc
gtk/totem-plugins/properties/: CMakeLists.txt  bacon-video-widget-properties.c  properties.gresource.xml  totem-movie-properties.cc
gtk/totem-plugins/rotation/: CMakeLists.txt  totem-rotation.cc
gtk/totem-plugins/variable-rate/: CMakeLists.txt  totem-variable-rate-plugin.cc
gtk/totem/data/: org.gnome.trtotem.gschema.xml.in  totem-player-toolbar.ui  totem-preferences-dialog.ui  totem-preferences-plugin-row.ui  totem.gresource.xml  totem.ui
gtk/totem/src/: totem-object.c.hidden  totem-player-toolbar.c  totem-player-toolbar.h  totem-preferences-dialog.c
gtk/totem/src/backend/: bacon-video-widget.c  bacon-video-widget.gresource.xml  bacon-video-widget.h  bacon-video-widget.ui  bitfield-scale.h
gtk/totem/src/gst/: totem-time-helpers.c
gtk/totem/src/gst/gst-bt/: gst_bt_demux.cpp
gtk/ui/gtk3/: #MakeDialog.ui#  DetailsDialog.ui  DetailsDialog.ui~  EditTrackersDialog.ui  MainWindow.ui  MakeDialog.ui  MakeDialog.ui~  OptionsDialog.ui  OptionsDialog.ui~  PrefsDialog.ui  PrefsDialog.ui~  StatsDialog.ui
include/libtorrent/: add_torrent_params.hpp  address.hpp  alert.hpp  alert_types.hpp  bt_peer_connection.hpp  close_reason.hpp  config.hpp  create_torrent.hpp  deadline_timer.hpp  disk_interface.hpp  error_code.hpp  extensions.hpp  file_storage.hpp  fwd.hpp  hasher.hpp  http_connection.hpp  info_hash.hpp  io_context.hpp  libtorrent.hpp  mmap_storage.hpp  part_file.hpp  peer.hpp  peer_class_type_filter.hpp  peer_connection.hpp  peer_connection_handle.hpp  peer_connection_interface.hpp  peer_info.hpp  peer_list.hpp  performance_counters.hpp  pex_flags.hpp  platform_util.hpp  random.hpp  session.hpp  session_handle.hpp  session_params.hpp  session_status.hpp  settings_pack.hpp  sha1.hpp  sha256.hpp  socket.hpp  (+14 more)
include/libtorrent/aux_/: allocating_handler.hpp  escape_string.hpp  file_progress.hpp  instantiate_connection.hpp  mmap_disk_job.hpp  noexcept_movable.hpp  posix_storage.hpp  receive_buffer.hpp  session_impl.hpp  session_interface.hpp  session_udp_sockets.hpp  socket_type.hpp  storage_utils.hpp  torrent_list.hpp
src/: add_torrent_params.cpp  alert.cpp  bdecode.cpp  bt_peer_connection.cpp  close_reason.cpp  create_torrent.cpp  disabled_disk_io.cpp  escape_string.cpp  file_progress.cpp  file_storage.cpp  http_connection.cpp  http_tracker_connection.cpp  instantiate_connection.cpp  listen_socket_handle.cpp  load_torrent.cpp  lsd.cpp  magnet_uri.cpp  mmap_disk_io.cpp  mmap_disk_job.cpp  mmap_storage.cpp  part_file.cpp  peer_connection.cpp  peer_connection_handle.cpp  peer_info.cpp  peer_list.cpp  posix_disk_io.cpp  posix_storage.cpp  random.cpp  read_resume_data.cpp  receive_buffer.cpp  request_blocks.cpp  session.cpp  session_handle.cpp  session_impl.cpp  session_params.cpp  session_settings.cpp  session_stats.cpp  settings_pack.cpp  smart_ban.cpp  socket_type.cpp  (+16 more)
